feat: new statistics routes
